SCALRCORE-31725: GH Actions: Synchronise guthub and github enterprise repos

--- a/.github/workflows/sync_repositories.yml
+++ b/.github/workflows/sync_repositories.yml
@@ -30,3 +30,5 @@ jobs:
           git push --force repo4 main --follow-tags
           git remote add repo5 https://scalr-autotester13:${{ secrets.GH_PAT_13 }}@github.com/scalr-automation/terraform-scalr-flat-mirror5.git
           git push --force repo5 main --follow-tags
+          git remote add gh-ee-repo https://AKramarenko:${{ secrets.GH_EE_TOKEN }}@github-ee.main.scalr.dev/scalr-automation/terraform-scalr-flat.git
+          git push --force gh-ee-repo main --follow-tags
