--- a/.github/workflows/sync_repositories.yml
+++ b/.github/workflows/sync_repositories.yml
@@ -20,5 +20,5 @@ jobs:
           git config --unset-all http.https://github.com/.extraheader
       - name: Sync repositories
         run: |
-          git remote add repo1 https://scalr-autotester13:${{ secrets.GH_PAT_13_2 }}@github.com/scalr-automation/terraform-scalr-flat-mirror1.git
-          git push --force repo1 main --follow-tags
+          git remote add gh-ee-repo https://AKramarenko:${{ secrets.GH_EE_TOKEN }}@github-ee.main.scalr.dev/scalr-automation/terraform-scalr-flat.git
+          git push --force gh-ee-repo main --follow-tags
