--- a/.github/workflows/sync_repositories.yml
+++ b/.github/workflows/sync_repositories.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: main
+          fetch-depth: 0
       - name: Set up Git
         run: |
           git config --global user.name "scalr-autotester"
